--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                             <a href="#" title="">订阅邮件</a>
                             <span>关注微信</span>
                             <div class="weixin-code">
-                                <span class="sprite"></span>
+                                <img src="http://placehold.it/100" alt="" />
                             </div>
                         </div>
                     </li>
-                    <li><a href="#" title="">试客联盟</a></li>
-                    <li><a href="#" title="">互联支付</a></li>
-                    <li><a href="#" title="">试客联盟</a></li>
+                    <li><a href="#" title="">帮助中心</a></li>
+                    <li><a href="#" title="">帮助中心</a></li>
+                    <li><a href="#" title="">帮助中心</a></li>
                     <li class="J_n-site-map n-float-box n-site-map">
                         <a href="#" title="">网站导航 <span class="p-triangle"></span></a>
                         <div class="n-cont">
@@ -51,11 +51,11 @@
                             <dl>
                                 <dt>网站热点</dt>
                                 <dd>
-                                    <a href="#" title="">最新上线</a>
-                                    <a href="#" title="">一战成名</a>
-                                    <a href="#" title="">名品馆</a>
+                                    <a href="#" title="">新手引导</a>
+                                    <a href="#" title="">新手引导</a>
+                                    <a href="#" title="">新手引导</a>
                                     <a href="#" title="">商品汇总</a>
-                                    <a href="#" title="">买家晒单</a>
+                                    <a href="#" title="">新手引导</a>
                                 </dd>
                             </dl>
                             <dl>
@@ -69,14 +69,14 @@
                                 <dd>
                                     <a href="#" title="">新手引导</a>
                                     <a href="#" title="">帮助中心</a>
-                                    <a href="#" title="">招商专区</a>
+                                    <a href="#" title="">帮助中心</a>
                                     <a href="#" title="">关于我们</a>
                                 </dd>
                             </dl>
                             <dl>
                                 <dt>合作网站</dt>
                                 <dd>
-                                    <a href="#" title="">试客联盟</a>
+                                    <a href="#" title="">帮助中心</a>
                                     <a href="#" title="">互联支付</a>
                                 </dd>
                             </dl>
@@ -87,7 +87,7 @@
             </div>
             <div class="top-l-nav">
                 <div class="n-login">
-                    <span>您好，欢迎来到众划算！</span>
+                    <span>您好，欢迎来到甜甜滴！</span>
                     <a href="#" title=""><span class="qq-icon iconfont">&#xe61b;</span>QQ 登录</a>
                     <a href="#" class="login-init" title="">登录</a>
                     <a href="#" title="">免费注册</a>
@@ -103,7 +103,7 @@
     <div class="header">
             <h1 class="logo">
                 <a href="#">
-                    <img src="/static/src/img/logo.png" alt="" alt="众划算" />
+                    <img src="http://placehold.it/395x45" alt="" alt="甜甜滴" />
                 </a>
             </h1>
             <div class="search">
@@ -122,16 +122,15 @@
             <ul>
                 <li><a href="#">商品汇总</a></li>
                 <li><a href="#">最新上线</a></li>
-                <li><a href="#">一站成名</a></li>
-                <li><a href="#">名品馆</a></li>
+                <li><a href="#">甜甜名品</a></li>
                 <li><a href="#">免费使用</a></li>
-                <li><a href="#">买家晒单</a></li>
+                <li><a href="#">甜甜出品</a></li>
                 <li><a href="#">关于我们</a></li>
             </ul>
-            <a href="#" class="zs-inlet">
+            <!-- <a href="#" class="zs-inlet">
                 <span class="zs-zw sprite"></span>
-                <span class="zs-tit sprite">众划算招商入口</span>
-            </a>
+                <span class="zs-tit sprite">甜甜滴招商入口</span>
+            </a> -->
         </div>
     </div>
     <div class="banner">
@@ -1037,14 +1036,14 @@
                 </span>  
                 <span class="question">有问题吗？请联系我们的客服</span>  
                 <a class="line-kefu" href="#">在线客服</a>
-                <span class="emall">mall@shikee.com</span>
+                <span class="emall">mall@tiantian.com</span>
             </div>
             <div class="f-strength">
                 <div class="f-strength-item">
                     <div class="f-strength-item-up">
                         <b class="iconfont">&#xe612;</b>
                         <span>每日更新</span>
-                        <p>每天10点、20点准时上线</p>   
+                        <p>每天00点、21点准时上线</p>   
                     </div>
                     <div class="f-strength-item-sub">
                         <div class="align">
@@ -1064,9 +1063,9 @@
                     <div class="f-strength-item-sub">
                         <div class="align">
                             <span>商家常见问题</span>
-                            <a href="#">众划算报名条件</a>
-                            <a href="#">如何发布众划算</a>
-                            <a href="#">众划算商家规则</a>
+                            <a href="#">甜甜滴报名条件</a>
+                            <a href="#">如何发布甜甜滴</a>
+                            <a href="#">甜甜滴商家规则</a>
                         </div>
                     </div>
                 </div>
@@ -1107,7 +1106,7 @@
                     <div class="f-strength-item-sub">
                         <div class="align">
                             <span class="sprite weinxi"></span>
-                            <span class="weixin-tit">众划算官方微信</span>
+                            <span class="weixin-tit">甜甜滴官方微信</span>
                         </div>
                     </div>
                 </div>
@@ -1117,13 +1116,12 @@
              <div class="f-c-cont">
                  <p class="f-c-link">友情链接： <a href="#">聚划算</a><a href="#">网络媒体排名</a></p>
                  <p class="f-c-copy">
-                     Copyright © 2006-2015 zhonghuasuan.com   版权所有:南宁一站网网络技术有限公司   地址:广西南宁市高新区高新大道62号光辉大厦3楼
+                     Copyright © 2006-2015 tiantian.com   版权所有:甜甜滴网络技术有限公司   地址:广西南宁市高新区
                  </p>
                  <p class="f-c-link">
-                    桂B2-20110047
-                    <a href="#">桂ICP备07009935号</a>
+                    桂B2-2B2B2B2
+                    <a href="#">桂ICP备8888888号</a>
                     <a href="#">站长统计</a>
-                    <a href="#">本站由速网科技提供CDN加速</a>
                  </p>
                  <p class="f-link-img">
                      <a href="#"></a>
@@ -1194,8 +1192,7 @@
     <script src="static/src/js/sea_confing.js" ></script>
     <script src="static/src/js/jquery-1.10.1.min.js"></script>
     <script>
-        seajs.use("static/src/js/readData");
-        seajs.use("static/src/js/index");
+        seajs.use(["static/src/js/readData", "static/src/js/index"])
     </script>
 </body>
 </html>
