修改文件路径

--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
             <div class="J_s_b small-banner">
                 <div class="J_s_p small-panel">
                     <ul>
-                        <li><a href="#"><img class="loading" src="/static/src/img/small2.png" width="200" height="218" alt="" /></a></li>
-                        <li><a href="#"><img class="loading" src="/static/src/img/small1.png" width="200" height="218" alt="" /></a></li>
-                        <li><a href="#"><img class="loading" src="/static/src/img/small3.png" width="200" height="218" alt="" /></a></li>
+                        <li><a href="#"><img class="loading" src="static/src/img/small2.png" width="200" height="218" alt="" /></a></li>
+                        <li><a href="#"><img class="loading" src="static/src/img/small1.png" width="200" height="218" alt="" /></a></li>
+                        <li><a href="#"><img class="loading" src="static/src/img/small3.png" width="200" height="218" alt="" /></a></li>
                     </ul>
                     <div class="J_s_tab small-tab">
                         <a class="cur" href="javascript:;"></a>
@@ -313,35 +313,35 @@
                 <div class="banner-item" style="background-color:#fe2f70">
                     <div class="banner-item-ct">
                         <a href="#1">
-                            <img class="loading" src="/static/src/img/1.jpg" width="800" height="340" alt="" />
+                            <img class="loading" src="static/src/img/1.jpg" width="800" height="340" alt="" />
                         </a>
                     </div>
                 </div>
                 <div class="banner-item" style="background-color:#ff6591">
                     <div class="banner-item-ct">
                         <a href="#2">
-                            <img class="loading" src="/static/src/img/2.jpg" width="800" height="340" alt="" />
+                            <img class="loading" src="static/src/img/2.jpg" width="800" height="340" alt="" />
                         </a>
                     </div>
                 </div>
                 <div class="banner-item" style="background-color:#dcdcdc">
                     <div class="banner-item-ct">
                         <a href="#3">
-                            <img class="loading" src="/static/src/img/3.jpg" width="800" height="340" alt="" />
+                            <img class="loading" src="static/src/img/3.jpg" width="800" height="340" alt="" />
                         </a>
                     </div>
                 </div>
                 <div class="banner-item" style="background-color:#dcdcdc">
                     <div class="banner-item-ct">
                         <a href="#4">
-                            <img class="loading" src="/static/src/img/4.jpg" width="800" height="340" alt="" />
+                            <img class="loading" src="static/src/img/4.jpg" width="800" height="340" alt="" />
                         </a>
                     </div>
                 </div>
                 <div class="banner-item" style="background-color:#f53252">
                     <div class="banner-item-ct">
                         <a href="#5">
-                            <img class="loading" src="/static/src/img/5.jpg" width="800" height="340" alt="" />
+                            <img class="loading" src="static/src/img/5.jpg" width="800" height="340" alt="" />
                         </a>
                     </div>
                 </div>
@@ -439,7 +439,7 @@
             </div>
             <div class="md-warp-sidebar">
                 <a href="#" class="warp-sidebar-bn">
-                    <img src="/static/src/img/sbn.jpg">
+                    <img src="static/src/img/sbn.jpg">
                 </a>
                 <ul class="J_g_t_tab">
                     <li><a href="#"><b class="iconfont">&#xe600;</b>潮流女装</a></li>    
@@ -580,7 +580,7 @@
             </div>
             <div class="md-warp-sidebar">
                 <a href="#" class="warp-sidebar-bn">
-                    <img src="/static/src/img/sbn.jpg">
+                    <img src="static/src/img/sbn.jpg">
                 </a>
                 <ul class="J_g_t_tab">
                     <li><a href="#"><b class="iconfont">&#xe606;</b>美食特产</a></li>    
@@ -721,7 +721,7 @@
             </div>
             <div class="md-warp-sidebar">
                 <a href="#" class="warp-sidebar-bn">
-                    <img src="/static/src/img/sbn.jpg">
+                    <img src="static/src/img/sbn.jpg">
                 </a>
                 <ul class="J_g_t_tab">
                     <li><a href="#"><b class="iconfont">&#xe60a;</b>婴童服装</a></li>    
